checkpoint-two/css/style.css
*{
    font-family: quattrocento;
}
/* creating a parallax effect */
.parallax{
    background-image: url(https://wallpaperscraft.com/image/keyboard_laptop_macro_73432_1920x1080.jpg);
    width: 100%;
    height: 100vh;
    background-size: cover;
    background-attachment: fixed;
    scroll-behavior: smooth;

}
.parallax h1{
    display: flex;
    color: white;
    justify-content: center;
    align-items: center;
    font-size: 60px;
    width: 100%;
    height: 100%;
    text-align: center;
}
.navbar{
    display: flex;
    flex-direction: column;
    float: right;
    box-sizing: border-box;
    /* border: 1px solid lightcoral; */
    background-color: lightcoral;
    height: 15%;
}
button{
    border: none;
    background-color: orange;
    font-size: 20px;
}
/* aligning the divs to float around the page */
.main{
    display: grid;
    grid-template-columns: repeat(5, 1fr);
    grid-template-areas:
    ". box1 box1 . ."
    ". . . box2 box2"
    ". box3 box3 . .";
    margin: 40px;
    padding: 10px;    
}
/* making all divs circles */
.what, .who, .goal{
    border: 2px solid lightseagreen;
    background-color: lightseagreen;
    box-sizing: border-box;
    width: 300px;
    height: 300px;
    border-radius: 50%;
    text-align: center;
    color: white;
    font-weight: 500;
}
.who{
    grid-area: box1;
    transition: transform .5s;
    /* speed of transition */
}
.who p{
    padding: 30px;
}
.what{
    grid-area: box2;
    transition: transform .5s;
}
h4{
    margin-top: 20px;
}
.goal{
    grid-area: box3;
    transition: transform .5s;
}
.goal p{
    margin: 25px;
    padding: 10px;
}
/* enlarges bubble on hover */
.who:hover, .what:hover, .goal:hover{
    transform: scale(1.5);
    background-color: darkslategray;
}

